--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "cypress": "^6.1.0",
     "cypress-react-selector": "^2.2.2",
     "cypress-react-unit-test": "^4.17.2",
+    "cypress-wait-until": "^1.7.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.15.0",
